--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css');
+
+/* base styles */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Quicksand";
+  color: #333;
+  background-color: aqua; 
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+.home-page{
+  text-align: center;
+  margin: 200px;
+  
+  
+}
+
+.home-page h1{
+  font-size: 70px;
+}
+
+form input,
+form button {
+padding: 8px; 
+padding-left: 16px; 
+font-size: 30px; 
+border: none;
+background: white;
+border-radius: 20px;
+
+
 }
