--- a/src/index.css
+++ b/src/index.css
@@ -5,88 +5,73 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
 
+}
+.App{
+  text-align: center;
+}
 body {
 
   font-family: "Quicksand";
   color: #333;
-  background-color: aqua; 
+  background-color: rgb(218, 210, 210); 
   min-height: 100%;
+  
 }
 
 header{
-  font-size: 25px;
+  font-size: 35px;
 }
 
-  header, form {
+ header, form {
     justify-content: center;
     min-height: 20vh;
     display: flex;
     align-items: center;
-}
+} 
 
-form input,
-form button {
+      input {
       padding: 8px; 
-      padding-left: 16px; 
       font-size: 30px; 
       border: none;
       background: white;
       border-radius: 20px;
-
+      outline: none;
+      margin: 20px;
 
     }
 
-    form button {
+    button {
       color: black;
-      background-color: white;
+      background: white;
+      padding: 5px; 
+      font-size: 25px; 
+      border-radius: 20px;
       cursor: pointer;
-      transition: all 0.3 ease;
       margin-left: 5px;
+      outline: none;
+      border: none;
   }
 
 
 
   form button:hover{
     color: white;
-    background-color: rgb(65, 29, 172);
+    background-color: rgb(9, 5, 23);
 
 }
 
-.fa-plus-circle {
-  margin-top: 3px;
-  margin-left: -8px;
+li{
+  font-size: 30px;
+  margin: 20px, auto;
 }
 
-textarea {
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-select {
-
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+li button{
+  background: none;
   outline: none;
   border: none;
-
 }
 
-select {
-  color: black;
-  width: 10rem;
-  height: 3.2rem;
-  cursor: pointer;
-  padding: 1rem;
-  margin: 1rem;
-  position: relative;
-  overflow: hidden;
-  border-radius: 50px;
-}
 
 
 
